[package]
name = "pbot"
version = "0.1.0"
authors = ["TKYC <terrykyc.7000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = {version = "0.3.8", features = ["winuser", "processthreadsapi", "memoryapi", "tlhelp32", "handleapi"] }